# anime_codenames

./: .gitignore  Cargo.toml
migrations/2024-10-25-125706_create_post/: up.sql
migrations/2024-10-27-132256_clue_info/: down.sql  up.sql
src/: database.rs  main.rs  models.rs  schema.rs
src/codename_game/: generate_board.rs  generate_image.rs  mod.rs  types.rs
src/codename_game/anilist_api/: get_list.rs  graphql.rs  mod.rs
src/commands/: add_list.rs  age.rs  complete_setup.rs  join_team.rs  mod.rs  start_codenames.rs
