[package]
name = "anime_codenames"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {version = "2.2.4", features = ["sqlite"]}
dotenv = "0.15.0"
poise = "0.6.1"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "model", "rustls_backend"]} 
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"]}
