[package]
name = "anime_codenames"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {version = "2.2.4", features = ["sqlite"]}
dotenv = "0.15.0"
poise = "0.6.1"
serde = "1.0.213"
serde_json = "1.0.132"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "model", "rustls_backend"]} 
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"]}
